# thesis

./: CMakeLists.txt  Utils.h  environment.h  main.cpp  thesis
client/: Client.h  ClientNetworkInteractor.h  RequestGenerator.h
coordinator/: Coordinator.h  CoordinatorNetworkInteractor.h
messages/: MessageType.h  Transaction.h  TransactionType.h
network/: NetworkEmulator.h  NetworkInteractor.h  Receiver.h
server/: Server.h  ServerNetworkInteractor.h
